[gd_scene load_steps=12 format=3 uid="uid://1vp5edqmomq4"]

[ext_resource type="Texture2D" uid="uid://d03r1ls7p1krs" path="res://assets/characters/player/Player-Sheet.png" id="1_d0c5g"]
[ext_resource type="Script" path="res://scripts/characters/player/Player.gd" id="1_h765d"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0mp1a"]
radius = 103.817

[sub_resource type="CircleShape2D" id="CircleShape2D_224kv"]
radius = 355.001

[sub_resource type="CircleShape2D" id="CircleShape2D_dw7fc"]
radius = 144.003

[sub_resource type="Animation" id="Animation_qsuic"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_qwwak"]
resource_name = "idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_n4ojb"]
resource_name = "scared"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_tc0mt"]
resource_name = "scared_walk"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [11, 12, 13, 14]
}

[sub_resource type="Animation" id="Animation_bjtds"]
resource_name = "walk"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3x7lh"]
_data = {
"RESET": SubResource("Animation_qsuic"),
"idle": SubResource("Animation_qwwak"),
"scared": SubResource("Animation_n4ojb"),
"scared_walk": SubResource("Animation_tc0mt"),
"walk": SubResource("Animation_bjtds")
}

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_h765d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_0mp1a")

[node name="ScaredArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScaredArea2D"]
shape = SubResource("CircleShape2D_224kv")
debug_color = Color(1, 1, 0.278431, 0.0745098)

[node name="DeathArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathArea2D"]
shape = SubResource("CircleShape2D_dw7fc")
debug_color = Color(1, 0.00784314, 0.0392157, 0.105882)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_d0c5g")
hframes = 4
vframes = 4
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_3x7lh")
}

[node name="ScaredDamageTimer" type="Timer" parent="."]

[connection signal="area_entered" from="ScaredArea2D" to="." method="_on_scared_area_2d_area_entered"]
[connection signal="area_exited" from="ScaredArea2D" to="." method="_on_scared_area_2d_area_exited"]
[connection signal="timeout" from="ScaredDamageTimer" to="." method="_on_scared_damage_timer_timeout"]
